--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
     <div id="header">
       <div class="container">
         <nav>
-          <img src="./images/logo.png" alt="<!>" class="logo" />
+          <img src="./images/logo.gif" alt="<!>" class="logo" />
           <ul id="sidemenu">
             <li><a href="#header">Home</a></li>
             <li><a href="#about">About</a></li>
-            <li><a href="#services">Services</a></li>
-            <li><a href="#portfolio">portfolio</a></li>
+            <!-- <li><a href="#services">Services</a></li> -->
+            <!-- <li><a href="#portfolio">portfolio</a></li> -->
             <li><a href="#contact">Contact</a></li>
             <i class="fa-solid fa-xmark" onclick="closemenu()"></i>
           </ul>
@@ -54,41 +54,42 @@
           <div class="about-col-2">
             <h1 class="sub-title">About Me</h1>
             <p>
-              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Modi
-              laudantium ex necessitatibus maiores facilis consectetur odio,
-              illum ullam tempore quae repellat quo, illo blanditiis at
-              obcaecati! Ab quasi molestiae praesentium. Aperiam, ratione.
+              Welcome to my portfolio website! I'm Manish Kumar, a B.Tech student in Computer Science. With the recent completion of my exams, I am now fully focused on my passion for web development. I am an enthusiastic learner, continuously expanding my skills in this field. I am truly excited about shaping a future in web development, and I take pride in my ability to adapt to new challenges. Together, let's create something beautiful and impactful.
             </p>
 
             <div class="tab-titles">
               <p class="tab-links active-link" onclick="opentab('skills')">
                 Skills
               </p>
-              <p class="tab-links" onclick="opentab('experience')">
+              <!-- <p class="tab-links" onclick="opentab('experience')">
                 Experience
-              </p>
+              </p> -->
               <p class="tab-links" onclick="opentab('education')">Education</p>
             </div>
             <!-- ----- for Skills ---- -->
             <div class="tab-contents active-tab" id="skills">
               <ul>
                 <li>
-                  <span>UI?UX</span><br />
-                  Designing Web/App interfaces
+                  <span>Language</span><br />
+                  JAVA | HTML | CSS | BOOTSTRAP | MySql |Learning JavaScript
                 </li>
                 <li>
                   <span>Web Development</span><br />
-                  Web app Development
+                  Website devlopment | Learning and adding experience.
                 </li>
                 <li>
-                  <span>App Development</span><br />
-                  Building Android/ios apps
+                  <span>Software</span><br />
+                  Adobe Photoshop | canva | Git | Word |Powerpoint
+                </li>
+                <li>
+                  <span>OS</span><br />
+                  Linux | Windows
                 </li>
               </ul>
             </div>
 
             <!-- --- for the Experience--- -->
-            <div class="tab-contents" id="experience">
+            <!-- <div class="tab-contents" id="experience">
               <ul>
                 <li>
                   <span>lorem </span><br />
@@ -104,18 +105,22 @@
                   Lorem ipsum dolor sit amet consectetur.
                 </li>
               </ul>
-            </div>
+            </div> -->
 
             <!--   for education  -->
             <div class="tab-contents" id="education">
               <ul>
                 <li>
                   <span>2023</span><br />
-                  B.Tech from Aiet Jaipur
+                  I hold a Bachelor's degree in Technology (B.Tech) from Arya Institute of Engineering and Technology, Jaipur.
                 </li>
                 <li>
                   <span>2019</span><br />
-                  12^th and 10^th from BSEB Bihar
+                  My 12th grade education from the Bihar School Examination Board (BSEB), Bihar.
+                </li>
+                <li>
+                  <span>2017</span><br />
+                  My 10th grade education from the Bihar School Examination Board (BSEB), Bihar.
                 </li>
               </ul>
             </div>
@@ -125,7 +130,7 @@
     </div>
 
     <!-- ---------services----- -->
-
+<!-- 
     <div id="services">
       <div class="container">
         <h1 class="sub-title">My Services</h1>
@@ -166,10 +171,10 @@
           </div>
         </div>
       </div>
-    </div>
+    </div> -->
 
     <!-- <!-- ------portfolio------- -- -->
-
+<!-- 
     >
     <div id="portfolio">
       <div class="container">
@@ -220,7 +225,7 @@
 
         <a href="#" class="btn">See more</a>
       </div>
-    </div>
+    </div> -->
 
     <!-- -------contact----- -->
 
@@ -232,19 +237,19 @@
             <p><i class="fa-solid fa-paper-plane"></i>manish271120@gmail.com</p>
             <p><i class="fa-solid fa-square-phone"></i>7631257695</p>
             <div class="social-icons">
-              <a href="#"><i class="fa-brands fa-facebook"></i></a>
-              <a href="#"><i class="fa-brands fa-square-twitter"></i></a>
+              <a href="https://www.facebook.com/ved.kumar.1675275?mibextid=ZbWKwL"><i class="fa-brands fa-facebook"></i></a>
+              <a href="https://twitter.com/ManishKuma64907"><i class="fa-brands fa-square-twitter"></i></a>
               <a href="https://www.linkedin.com/in/manish-kumar-ab555a1a1/"
                 ><i class="fa-brands fa-linkedin"></i
               ></a>
-              <a href="#"><i class="fa-brands fa-instagram"></i></a>
+              <a href="https://instagram.com/manish.raghav_?igshid=MzNlNGNkZWQ4Mg=="><i class="fa-brands fa-instagram"></i></a>
             </div>
             <a href="images/resumephoto.pdf" download class="btn btn2"
               >Download Resume</a
             >
           </div>
 
-          <div class="contact-right">
+          <div class="contact-right" id="msg">
             <form name="submit-to-google-sheet">
               <input type="text" name="Name" placeholder="Your Name" required />
               <input
