--- a/index.html
+++ b/index.html
@@ -250,7 +250,7 @@
           </div>
 
           <div class="contact-right" id="msg">
-            <form name="submit-to-google-sheet">
+            <form name="submit-to-google-sheet"  method="post" action="https://script.google.com/macros/s/AKfycbyRDAA9MK_5TzKvPkQM2G1w6MrqCUzXNoBtCfb3gFcf-yYETfFFb-iyU5S0Ry3o_G6u/exec">
               <input type="text" name="Name" placeholder="Your Name" required />
               <input
                 type="email"
@@ -266,7 +266,7 @@
               <button type="submit" class="btn btn2">Submit</button>
             </form>
 
-            <span id="msg" ></span>
+            
           </div>
         </div>
       </div>
