--- a/index.html
+++ b/index.html
@@ -244,7 +244,7 @@
               ></a>
               <a href="https://instagram.com/manish.raghav_?igshid=MzNlNGNkZWQ4Mg=="><i class="fa-brands fa-instagram"></i></a>
             </div>
-            <a href="images/resumephoto.pdf" download class="btn btn2"
+            <a href="images/Manish_Kumar_Resume_07-07-2023-21-42-16.pdf" download class="btn btn2"
               >Download Resume</a
             >
           </div>
