--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
       rel="stylesheet"
     />
     <link rel="stylesheet" href="style.css" />
-
-    <script src="index.js"></script>
+       
+    <script src="./index.js"></script>
     <script
       src="https://kit.fontawesome.com/221b248765.js"
       crossorigin="anonymous"
