--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
         </nav>
 
         <div class="header-text">
-          <p>Software Enggineer</p>
+          <p>Software Engineer</p>
           <h1>
             Hi, I'm <span>Manish </span> <br />
             Kumar From India
